tests/ui/nsstring_as_str_use_after_release.stderr
error[E0505]: cannot move out of `ns_string` because it is borrowed
  --> ui/nsstring_as_str_use_after_release.rs:10:14
   |
9  |         let s = ns_string.as_str(pool);
   |                 ---------------------- borrow of `ns_string` occurs here
10 |         drop(ns_string);
   |              ^^^^^^^^^ move out of `ns_string` occurs here
11 |         println!("{}", s);
   |                        - borrow later used here
